<resources>
    <string name="app_name" translatable="false">Music</string>
    <string name="nav_songs">Songs</string>
    <string name="nav_playlists">Playlists</string>
    <string name="nav_albums">Albums</string>
    <string name="nav_artists">Artists</string>
    <string name="notification_channel_name">Playing Music</string>
    <string name="notification_channel_description">Show what music is playing</string>
    <string name="item_artist_songs">%d songs</string>
    <string name="nav_album">Album</string>
    <string name="description_more">Show more options</string>
    <string name="description_art">Cover art of the current playing song</string>
    <string name="description_play_pause">Play or pause the playback</string>
    <string name="description_skip_prev">Skips to the previous song on the queue</string>
    <string name="description_skip_next">Skips to the next song on the queue</string>
    <string name="description_repeat">Toggles the repeat mode of the queue</string>
    <string name="description_show_queue">Shows the current queue</string>
    <string name="description_drop_down">Drops the now playing screen down</string>
    <string name="description_drag">Allows to drag the song</string>
    <string name="description_art_preview">Cover art of the song</string>
    <string name="menu_play_next">Play Next</string>
    <string name="menu_add_to_queue">Add to Queue</string>
    <string name="menu_go_album">Go to Album</string>
    <string name="menu_go_artist">Go to Artist</string>
    <string name="menu_add_to_playlist">Add to Playlist</string>
    <string name="menu_settings">Settings</string>
    <string name="playlist_recently_added">Recently Added</string>
    <string name="shuffle">Shuffle</string>
    <string name="playlist_create_new">Create new playlist</string>
    <string name="description_playlist_cover">Playlist cover art</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_create">Create</string>
    <string name="dialog_playlist_name">Playlist name</string>
    <string name="dialog_apply">Apply</string>
    <string name="dialog_delete_playlist">Delete Playlist</string>
    <string name="dialog_select_playlist">Select Playlist</string>
    <string name="dialog_new_playlist">New Playlist</string>
    <string name="menu_search">Search</string>
    <string name="dialog_select_artist">Select Artist</string>
    <string name="menu_remove_from_playlist">Remove from playlist</string>
    <string name="item_no_songs">No songs has been found in this folder/playlist. You can change the folder from the settings in the top right corner of the screen.</string>
    <string name="title_settings">Settings</string>
    <string name="preference_category_folder">Folder</string>
    <string name="preference_reset_folder">Default Folder</string>
    <string name="preference_folder">Change Folder</string>
    <string name="preference_reset_folder_summary">Reset the folder to the default one (Music).</string>
    <string name="folder_all">All Media</string>
    <string name="preference_category_general">General Settings</string>
    <string name="preference_stop_on_task">Stop playback when dismissing task.</string>
    <string name="preference_stop_on_task_summary_on">Playback will be stopped when dismissing task.</string>
    <string name="preference_stop_on_task_summary_off">Playback will continue to play when dismissing task.</string>
    <string name="preference_category_display">Display Settings</string>
    <string name="preference_display">Keep screen on when currently playing screen is up.</string>

</resources>